--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 PROJECT(GLSample)
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
+
+# SET(CMAKE_INSTALL_PREFIX ${CMAKE_SOURCE_DIR}/GLSample)
+
 ADD_SUBDIRECTORY(src)
-
-SET(CMAKE_INSTALL_PREFIX ${CMAKE_SOURCE_DIR}/game)
-
 INSTALL(DIRECTORY res/ DESTINATION res)
